cmake_minimum_required(VERSION 3.2)
project(hierarchical_map_compiler)
include_directories(include)
link_directories(lib)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)
if(UNIX AND NOT APPLE)
  set(htd "libhtd.so")
endif(UNIX AND NOT APPLE)

if(APPLE)
  set(htd "libhtd.0.dylib")
endif(APPLE)
include_directories(src include lib/psdd lib/psdd/lib/googletest/googletest/include lib/psdd/lib/googletest/googlemock/include lib/psdd/lib/libsdd/ lib/psdd/lib/json/include/nlohmann lib/psdd/lib/json/include )
add_subdirectory(lib/psdd)
file(GLOB HIERARCHICAL_MAP_COMPILER_SRC_FILES "src/*.h" "src/*.cpp" "src/*.c")
file(GLOB HIERARCHICAL_MAP_COMPILER_TEST_SRC_FILES "test/*.cpp")
add_library(hmc ${HIERARCHICAL_MAP_COMPILER_SRC_FILES})
add_executable(hmc_test ${HIERARCHICAL_MAP_COMPILER_TEST_SRC_FILES})
add_executable(hmc_main main.cpp)
target_link_libraries(hmc psdd sdd nlohmann_json gmp gtest gtest_main ${htd})
target_link_libraries(hmc_test hmc psdd sdd nlohmann_json gmp gtest gtest_main ${htd})
target_link_libraries(hmc_main hmc psdd sdd nlohmann_json gmp gtest gtest_main ${htd})
