cmake_minimum_required(VERSION 3.2)
project(hierarchical_map_compiler)
include_directories(include)
link_directories(lib)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)

if(UNIX AND NOT APPLE)
  set(sdd "libsdd_linux.a")
  set(psdd "libpsdd_linux.a")
  set(gtest "libgtest_linux.a")
  set(gtest_main "libgtest_main_linux.a")
  set(htd "libhtd.so")
endif(UNIX AND NOT APPLE)

if(APPLE)
  set(sdd "libsdd_apple.a")
  set(psdd "libpsdd_apple.a")
  set(gtest "libgtest_apple.a")
  set(gtest_main "libgtest_main_apple.a")
  set(htd "libhtd.0.dylib")
endif(APPLE)

include_directories(include)
file(GLOB HIERARCHICAL_MAP_COMPILER_SRC_FILES "src/*.h" "src/*.cpp" "src/*.c")
file(GLOB HIERARCHICAL_MAP_COMPILER_TEST_SRC_FILES "test/*.cpp")
add_library(hmc ${HIERARCHICAL_MAP_COMPILER_SRC_FILES})
add_executable(hmc_test ${HIERARCHICAL_MAP_COMPILER_TEST_SRC_FILES})
add_executable(hmc_main main.cpp)
target_link_libraries(hmc ${psdd} ${sdd} gmp ${htd})
target_link_libraries(hmc_test hmc ${psdd} ${sdd} gmp ${gtest} ${gtest_main} ${htd} pthread)
target_link_libraries(hmc_main hmc ${psdd} ${sdd} gmp ${htd})
